Fix style of TaskWrapper component
1. Hide scrollbar

--- a/app/src/components/task-wrapper/TaskWrapper.module.scss
+++ b/app/src/components/task-wrapper/TaskWrapper.module.scss
@@ -3,11 +3,13 @@
 .wrapper{
     background-color: white;
     min-height: 80vh;
+    max-height: 80vh;
     height: 100%;
     min-width: 300px;
     max-width: 300px;
     width: 100%;
     border-radius: 1rem;
+    overflow: hidden;
 }
 
 .title-todo{
@@ -35,7 +37,11 @@
 }
 
 .content{
-    padding: 0px 20px 0px 20px;
+    padding-right: 20px;
+    padding-left: 10px;
+    max-height: 70vh;
+    width: 100%;
+    overflow-y: scroll;
 }
 
 @media (max-width: 1000px){
